@@ -36,15 +36,23 @@ cd src/main/src/jetty
 cp context-sample.xml context.xml
 ```
 
-### To run
+### Running using Jetty
 
+Maven project is in src/main
 ```
-cd src/main
-mvn jetty:run
+cd ../src/main
+```
+
+GeoServer requires extra memory above the normal maven defaults, so you will need to bump up the memory when running this command. For example, run `export MAVEN_OPTS='-Xms100m -Xmx512m -XX:MaxPermSize=192m'`
+prior to running this command or add this command to you startup scripts
+
+Then to run jetty on port 9090 you can use:
+```
+mvn jetty:run -Djetty.port=9090
 ```
 
 GeoServer will then be available at:
 
 ```
-http://localhost:8080
+http://localhost:9090
 ```
